Migrate direnv setup to flakes

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
-env="$(nix-build $PWD/direnv.nix -A devEnv --no-out-link)"
+nix build -o $PWD/.direnv
+env="$PWD/.direnv"
 
 load_prefix "${env}"
 path_add XDG_DATA_DIRS "${env}/share"
