--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,7 @@
+watch_file flake.nix
+watch_file flake.lock
+watch_file nix/overlays/wire-cli.nix
+
 nix build -o $PWD/.direnv
 env="$PWD/.direnv"
 
