--- a/cabal.project
+++ b/cabal.project
@@ -3,7 +3,52 @@ source-repository-package
   location: git://github.com/wireapp/cryptobox-haskell
   tag: 3a65e2fa055ae2f4ffaea4c168a3edfe8958d84d
 
+-- akshaymankar/fix-wire-message-cabal
+source-repository-package
+  type: git
+  location: git://github.com/wireapp/wire-server
+  tag: 0f18ad4a8e33070ac10003b5dc14627f03dcce58
+  subdir: libs/wire-api libs/schema-profunctor libs/wire-message-proto-lens libs/imports libs/types-common libs/cassandra-util libs/extended libs/deriving-swagger2 libs/hscim
+
+source-repository-package
+  type: git
+  location: git://github.com/wireapp/saml2-web-sso
+  tag: 60398f375987b74d6b855b5d225e45dc3a96ac06
+
+source-repository-package
+  type: git
+  location: https://github.com/google/proto-lens
+  tag: 95d14dc6c3ce5ff9fe30f87245bbe3879a05c9a9
+  subdir: proto-lens-arbitrary
+
+source-repository-package
+  type: git
+  location: https://github.com/wireapp/hsaml2
+  tag: b652ec6e69d1647e827cbee0fa290605ac09dc63
+
 packages: ./wire-cli.cabal ./wire-message/wire-message.cabal
 
 package wire-cli
   tests: true
+
+package saml2-web-sso
+  ghc-options: -Wwarn
+
+constraints: base16-bytestring == 0.1.1.7
+           , singletons < 3
+           , servant-multipart == 0.11.5
+           , ghc-source-gen == 0.4.1.0
+           , generic-random == 1.3.0.1
+           , swagger2 == 2.5
+
+allow-newer: servant-multipart:servant
+           , servant-multipart:servant-server
+           , servant-multipart:servant-client-core
+           , servant-multipart:lens
+           , swagger2:base
+           , swagger2:aeson
+           , swagger2:lens
+           , swagger2:template-haskell
+           , swagger2:optics-core
+           , swagger2:optics-th
+           , swagger2:QuickCheck
