--- a/cabal.project
+++ b/cabal.project
@@ -3,12 +3,12 @@ source-repository-package
   location: git://github.com/wireapp/cryptobox-haskell
   tag: 3a65e2fa055ae2f4ffaea4c168a3edfe8958d84d
 
--- akshaymankar/fix-wire-message-cabal
+-- develop on 2021/12/03
 source-repository-package
   type: git
   location: git://github.com/wireapp/wire-server
-  tag: 0f18ad4a8e33070ac10003b5dc14627f03dcce58
-  subdir: libs/wire-api libs/schema-profunctor libs/wire-message-proto-lens libs/imports libs/types-common libs/cassandra-util libs/extended libs/deriving-swagger2 libs/hscim
+  tag: cab62c11e4ef7ca63e1982790d26f8d2444dfabe
+  subdir: libs/wire-api libs/schema-profunctor libs/wire-message-proto-lens libs/imports libs/types-common libs/cassandra-util libs/extended libs/deriving-swagger2 libs/hscim libs/metrics-wai libs/metrics-core
 
 source-repository-package
   type: git
@@ -40,6 +40,7 @@ constraints: base16-bytestring == 0.1.1.7
            , ghc-source-gen == 0.4.1.0
            , generic-random == 1.3.0.1
            , swagger2 == 2.5
+           , wai-route == 0.4.0
 
 allow-newer: servant-multipart:servant
            , servant-multipart:servant-server
