--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -55,7 +55,9 @@ library
   hs-source-dirs:      src
   ghc-options:         -fplugin=Polysemy.Plugin
   build-depends:
-                       aeson
+                       HsOpenSSL
+                     , HsOpenSSL-x509-system
+                     , aeson
                      , base64
                      , bytestring
                      , bytestring-conversion
@@ -65,43 +67,44 @@ library
                      , deriving-aeson
                      , directory
                      , extra
+                     , filepath
+                     , gi-gio
+                     , gi-gio-hs-list-model
+                     , gi-glib
+                     , gi-gtk
+                     , gi-pango
+                     , haskell-gi-base
                      , http-client
                      , http-client-openssl
+                     , http-client-websockets
                      , http-types
-                     , HsOpenSSL
-                     , HsOpenSSL-x509-system
                      , keys
                      , lens-family
-                     , filepath
                      , network-uri
                      , optparse-applicative
-                     , proto-lens
                      , polysemy
                      , polysemy-plugin
                      , polysemy-zoo >= 0.7
+                     , profunctors
+                     , proto-lens
+                     , schema-profunctor
+                     , servant
+                     , servant-client
+                     , servant-client-core
                      , text
                      , time
-                     , wire-message
+                     , types-common
                      , unagi-chan
                      , unordered-containers
                      , uuid
-                     , gi-gtk
-                     , gi-gio
-                     , haskell-gi-base
-                     , gi-pango
-                     , gi-glib
-                     , gi-gio-hs-list-model
+                     , websockets
                      , wire-api
-                     , types-common
+                     , wire-message
+
                      -- ghc-source-gen-0.4.2.0 doesn't compile and even
                      -- specifying this in constraints section of cabal.project
                      -- doesn't work
                      , ghc-source-gen == 0.4.1.0
-                     , servant
-                     , servant-client
-                     , servant-client-core
-                     , websockets
-                     , http-client-websockets
   exposed-modules:
                        Wire.CLI.App
                      , Wire.CLI.Backend
@@ -132,6 +135,7 @@ library
                      , Wire.CLI.Store.Effect
                      , Wire.CLI.Store.File
                      , Wire.CLI.Store.StoredMessage
+                     , Wire.CLI.Store.StoredMessage.JSON
                      , Wire.CLI.User
                      , Wire.CLI.Util.ByteStringJSON
                      , Wire.CLI.Util.JSONStrategy
