Notifications: Stop looping and close conn on missing pongs

--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -58,6 +58,7 @@ library
                        HsOpenSSL
                      , HsOpenSSL-x509-system
                      , aeson
+                     , async
                      , base64
                      , bytestring
                      , bytestring-conversion
