Compile all dependencies with nix

--- a/.envrc
+++ b/.envrc
@@ -5,6 +5,7 @@ watch_file nix/overlays/wire-cli.nix
 nix build -o $PWD/.direnv
 env="$PWD/.direnv"
 
-load_prefix "${env}"
-path_add XDG_DATA_DIRS "${env}/share"
-path_add GI_TYPELIB_PATH "${env}/lib/girepository-1.0"
+PATH_add "${env}/bin"
+
+# path_add XDG_DATA_DIRS "${env}/share"
+# path_add GI_TYPELIB_PATH "${env}/lib/girepository-1.0"
