--- a/cabal.project
+++ b/cabal.project
@@ -1,19 +1,22 @@
+-- Warning: This is a generated file. PLEASE DO NOT EDIT. Run hack/mk-cabal-project.sh to regenerate.
+
 source-repository-package
   type: git
   location: https://github.com/wireapp/cryptobox-haskell
   tag: 3a65e2fa055ae2f4ffaea4c168a3edfe8958d84d
 
--- develop on 2022/01/15
+
 source-repository-package
   type: git
   location: https://github.com/wireapp/wire-server
-  tag: 6fea75734de30b9d240f79a312e95ad1775ee68b
-  subdir: libs/wire-api libs/schema-profunctor libs/wire-message-proto-lens libs/imports libs/types-common libs/cassandra-util libs/extended libs/deriving-swagger2 libs/hscim libs/metrics-wai libs/metrics-core
+  tag: 7fe73c7338b397140f1aca12c79f320ac277d8c3
+  subdir: libs/wire-api libs/schema-profunctor libs/wire-message-proto-lens libs/imports libs/types-common libs/cassandra-util libs/extended libs/deriving-swagger2 libs/hscim libs/metrics-wai libs/metrics-core libs/wai-utilities
 
 source-repository-package
   type: git
   location: https://github.com/wireapp/saml2-web-sso
-  tag: 60398f375987b74d6b855b5d225e45dc3a96ac06
+  tag: 4227e38be5c0810012dc472fc6931f6087fbce68
+
 
 source-repository-package
   type: git
@@ -26,12 +29,25 @@ source-repository-package
   location: https://github.com/wireapp/hsaml2
   tag: b652ec6e69d1647e827cbee0fa290605ac09dc63
 
--- https://github.com/snoyberg/http-client/pull/474
+
 source-repository-package
   type: git
-  location: https://github.com/akshaymankar/http-client
-  tag: f0eeba2f7d9b82dcfb67e5bd6965ef68422477b6
-  subdir: http-client
+  location: https://gitlab.com/axeman/swagger.git
+  tag: e2d3f5b5274b8d8d301b5377b0af4319cea73f9e
+
+
+source-repository-package
+  type: git
+  location: https://gitlab.com/twittner/wai-routing.git
+  tag: 7e996a93fec5901767f845a50316b3c18e51a61d
+
+
+constraints: polysemy-mocks == 0.3.0.0
+           , partial-isomorphisms == 0.2.2.1
+           , singletons == 2.7
+           , hspec-wai == 0.9.2
+           , th-desugar == 1.11
+           , wai-route == 0.4.0
 
 packages: ./wire-cli.cabal ./wire-message/wire-message.cabal
 
@@ -41,22 +57,11 @@ package wire-cli
 package saml2-web-sso
   ghc-options: -Wwarn
 
-constraints: base16-bytestring == 0.1.1.7
-           , singletons < 3
-           , servant-multipart == 0.11.5
-           , ghc-source-gen == 0.4.1.0
-           , generic-random == 1.3.0.1
-           , swagger2 == 2.5
-           , wai-route == 0.4.0
+allow-newer: hscim:servant
+           , hscim:servant-server
+           , hscim:servant-client-core
+           , hscim:servant-client
+           , lens-datetime:lens
 
-allow-newer: servant-multipart:servant
-           , servant-multipart:servant-server
-           , servant-multipart:servant-client-core
-           , servant-multipart:lens
-           , swagger2:base
-           , swagger2:aeson
-           , swagger2:lens
-           , swagger2:template-haskell
-           , swagger2:optics-core
-           , swagger2:optics-th
-           , swagger2:QuickCheck
+constraints: lens == 5.1
+           , lens-aeson == 1.1.3
