--- a/wire-cli.cabal
+++ b/wire-cli.cabal
@@ -204,11 +204,10 @@ test-suite "unit"
                      , Wire.CLI.Store.StoredMessageSpec
                      , Wire.CLI.TestUtil
 
-test-suite "integration"
+executable "wire-cli-integration"
   default-language:    Haskell2010
   hs-source-dirs:      integration
   main-is:             Spec.hs
-  type:                exitcode-stdio-1.0
   ghc-options:         -Wall -threaded
   build-depends:       aeson
                      , base >=4.12 && <5
