--- a/.envrc
+++ b/.envrc
@@ -2,10 +2,4 @@ watch_file flake.nix
 watch_file flake.lock
 watch_file nix/overlays/wire-cli.nix
 
-nix build -o $PWD/.direnv
-env="$PWD/.direnv"
-
-PATH_add "${env}/bin"
-
-# path_add XDG_DATA_DIRS "${env}/share"
-# path_add GI_TYPELIB_PATH "${env}/lib/girepository-1.0"
+use flake
